test/suites/fail-check/Regr-348.pol
codata Fun(a b: Type) {
    Fun(a,b).ap(a b: Type, x: a) : b
}

let bar(f: Fun(?, ?)): f.ap(?, ?, ?) {
    ?
}
